feat: 커스텀 API 호출 횟수 관리 기능 추가 및 Redis와 DB 동기화 로직 구현